fix challenge alignment

--- a/app/assets/stylesheets/components/region_tile.scss
+++ b/app/assets/stylesheets/components/region_tile.scss
@@ -30,7 +30,8 @@
         top: 50%;
         left: 50%;
         margin-right: -50%;
-        transform: translate(-50%, -50%)
+        transform: translate(-50%, -50%);
+        font-weight: 300;
       }
     }
   }
